# geventhttpclient

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG  LICENSE-MIT  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.mdown  SECURITY.md  appveyor.yml  conftest.py  pyproject.toml  pytest.ini  release.md  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: publish.yml  python-publish.yml  test.yml
benchmarks/: README.md  benchmark.py  geventhttpclient_bench.py  grequests_bench.py  httpclient.py  httplib2_patched.py  httplib2_patched_bench.py  httplib2_simple.py  httpx_bench.py  requests_bench.py  restkit_bench.py  urllib3_bench.py
examples/: download.py  download_raw.py  facebook.py  httplib2_patched.py  twitter_streaming.py  urllib_patched.py
ext/: HTTP_PARSER_VERSION.txt  Python_compat.h  _parser.c  http_parser.c  http_parser.h
geventhttpclient/: __init__.py  response.py  useragent.py
src/geventhttpclient/: __init__.py  client.py  connectionpool.py  grequests.py  header.py  httplib.py  httplib2.py  httplibcompat.py  parser.py  response.py  url.py  useragent.py  utils.py
src/geventhttpclient/tests/: __init__.py  conftest.py  data  server.crt  server.csr  server.key  test_client.py  test_grequests.py  test_headers.py  test_http_host.py  test_httplib.py  test_httplib2.py  test_keep_alive.py  test_network_failures.py  test_no_module_ssl.py  test_parser.py  test_requests.py  test_ssl.py  test_url.py  test_useragent.py
src/httpparser/: response.py
src/httpparser/tests/: test_parser.py
tests/: __init__.py  common.py  oncert.pem  server.crt  test_client.py  test_headers.py  test_httplib.py  test_keep_alive.py  test_network_failures.py  test_no_module_ssl.py  test_requests.py  test_ssl.py  test_url.py  test_useragent.py
