[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "geventhttpclient"
version = "2.1.0" # dont forget to update version __init__.py as well
description = "HTTP client library for gevent"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["http", "gevent", "client"]
authors = [{name = "Antonin Amand", email = "antonin.amand@gmail.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "gevent",
    "certifi",
    "brotli",
    "urllib3",
]
optional-dependencies.dev = [
    "pytest",
    "dpkt",
    "requests",
]
optional-dependencies.benchmarks = [
    "requests",
    "httpx",
    "urllib3",
    "httplib2"
]

[project.urls]
homepage = "http://github.com/geventhttpclient/geventhttpclient"
issues = "http://github.com/geventhttpclient/geventhttpclient/issues"
download = "https://pypi.org/project/geventhttpclient/#files"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["geventhttpclient.tests*"]

[tool.setuptools.package-data]
"*" = ["LICENSE.txt", "README.md", "release.md", "LICENSE-MIT"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "*.pyc", "*.pyo"]


[tool.pytest.ini_options]
markers = [
    "network: tests which require internet access"
]


[tool.tox]
envlist = "py{39,310,311,312}"

[tool.tox.testenv]
allowlist_externals = [
    "rm",
    "find",
    "pytest"
]
commands = [
    "rm -rf build",
    "find . -name '*.pyc' -delete",
    "python setup.py clean",
    "python setup.py build_ext --inplace",
    "pip install -r requirements-dev.txt",
    "pytest --fulltrace src/geventhttpclient/tests"
]


[tool.ruff]
fix = false
line-length = 100
target-version = "py311"
lint.extend-select = ["UP"]
lint.ignore = ["F821", "UP038", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["geventhttpclient"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_no_module_ssl.py" = ["F401"]
